# OpenCvDnnPythonAndBasicCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
cfg/: yolov4-tiny.cfg
darknetUtility/: CMakeLists.txt
darknetUtility/src/: DarknetUtility.cpp  DarknetUtility.hpp
srcCpp/: DarknetUtilility.cpp  DarknetUtilility.hpp
